fix: icon picker alignment

--- a/private/sass/components/_icons.scss
+++ b/private/sass/components/_icons.scss
@@ -48,3 +48,7 @@ svg path {
 .djangocms-icon .caret {
     margin-left: 8px;
 }
+
+.djangocms-icon .icon-widgets label.iconpicker.iconpicker-wrapper.js-icon-picker {
+    min-width: fit-content;
+}
